--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,14 @@
     ],
     "require": {
         "php": ">=7.0",
-        "filp/whoops": "*"
+        "ext-mysqli": "*",
+        "filp/whoops": "*",
+        "phpunit/phpunit":"6.5.*"
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
