--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "require": {
         "php": ">=7.0",
         "ext-mysqli": "*",
+        "ext-gd": "*",
+        "ext-mbstring": "*",
+        "ext-iconv" : "*",
         "filp/whoops": "*",
         "phpunit/phpunit":"6.5.*"
     },
